<resources>
    <string name="app_name">PICAR</string>
    <string name="lbl_image">Image</string>
    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_project_not_selected">Project not selected.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_database_error">Database Error</string>
    <string name="failure_input">Input Error or Fallen Network</string>
    <string name="msg_users_saved">Users saved</string>
    <string name="select_photo">Select a photo</string>
    <string name="lbl_title_login">Sign In</string>
    <string name="lbl_new_form">New Form</string>
    <string name="lbl_update_form">Update Form</string>
    <string name="hint_user">User name</string>
    <string name="hint_title">Title Form</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_select_unit">Select Unit</string>
    <string name="lbl_select_project">Select Project</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_change_user">Change user</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_form_id">FrmId</string>
    <string name="lbl_state">State:</string>
    <string name="lbl_id">Id:</string>
    <string name="lbl_unity">Unity:</string>
    <string name="lbl_codeProject">Code Project:</string>
    <string name="lbl_nameProject">Name Project:</string>
    <string name="lbl_longitude">Longitude:</string>
    <string name="lbl_latitude">Latitude:</string>
    <string name="lbl_datePresentation">Date Presentation:</string>
    <string name="lbl_dateInitAgreement">Date Init Agreement:</string>
    <string name="lbl_dateEndAgreement">Date End Agreement:</string>
    <string name="lbl_tab_projects">Projects</string>
    <string name="lbl_tab_forms">Forms</string>
    <string name="lbl_tab_new">Form</string>
    <string name="lbl_tab_detail">Detail</string>
    <string name="item_menu_1">Action 1</string>
    <string name="item_menu_2">Action 2</string>
    <string name="item_menu_3">Action 3</string>
    <string name="not_permission_location">Not access location</string>
    <string name="not_permission_camera">Not photo</string>
    <string name="not_permission_read_external">Not Read External Storage</string>
    <string name="not_permission_write_external">Not Write External Storage</string>
    <string name="not_permission_read_phone">Not Read Phone State</string>
    <string name="not_permission_read_calendar">Not read calendar</string>
    <string name="not_permission_write_calendar">Not write_calendar</string>
    <string name="value_null">Cannot transform a null value</string>
    <string name="select_image">Select image</string>
    <string name="lbl_finished">Finished</string>
    <string name="title_my_location">My Location</string>
    <string name="msg_email_not_found">Email not found</string>
    <string name="msg_user_not_found">User not found</string>
    <string name="msg_connect_ok">Successful Request</string>
    <string name="new_filter">New Filter</string>
    <string name="lbl_code">Code</string>
    <string name="lbl_value">Value</string>
    <string name="lbl_cumple">Cumple</string>
    <string name="lbl_comment">Comment</string>
    <string name="msg_download">Download complete</string>
    <string name="msg_error_download_unities">Error download Unities</string>
    <string name="msg_error_download_projects">Error download Projects</string>
    <string name="msg_error_download_forms">Error download Forms</string>
    <string name="msg_error_download_types_forms">Error download Types Forms</string>
    <string name="msg_error_download_content_forms">Error download Content Forms</string>
    <string name="msg_error_connection_other">Connection Some Other Error</string>
    <string name="msg_error_wrong_unit">Wrong unit</string>
    <string name="lbl_save_bodies">Save</string>
    <string name="lbl_title_splash">WELCOME SIGG PICAR</string>
    <string name="lbl_title_app">App Mobile</string>
    <string name="lbl_empoderar_picar">To Empower PICAR</string>
</resources>
