<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_one_guideline"
            app:layout_constraintGuide_percent=".30"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_two_guideline"
            app:layout_constraintGuide_percent=".82"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/lbl_new_form"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_two_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_add"
            android:src="@drawable/ic_add"
            android:background="@null"
            android:contentDescription="@string/lbl_image"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_title"
            android:text="@string/lbl_title"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ib_add"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_title"
            android:textColor="@color/colorSecondaryText"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:hint="@string/hint_title"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_title"
            tools:ignore="Autofill"
            android:inputType = "textMultiLine" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_form_id"
            android:text="@string/lbl_form_id"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_title"/>

        <Spinner
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:id="@+id/sp_select"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_form_id" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_date"
            android:text="@string/lbl_date"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/sp_select"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_date"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_latitude"
            android:text="@string/lbl_latitude"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_latitude"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_latitude"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_longitude"
            android:text="@string/lbl_longitude"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_latitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_longitude"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_longitude"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_image"
            android:text="@string/select_image"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_longitude"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_photo"
            android:src="@drawable/ic_camera"
            android:background="@null"
            android:contentDescription="@string/lbl_image"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_image"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_finish"
            android:text="@string/lbl_finished"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ib_photo"/>

        <CheckBox
            android:id="@+id/cb_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_finish" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_bodies"
            android:src="@drawable/ic_layers"
            android:background="@null"
            android:contentDescription="@string/lbl_image"
            app:layout_constraintRight_toLeftOf="@+id/ib_save"
            app:layout_constraintTop_toTopOf="@+id/cb_finished"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_save"
            android:src="@drawable/ic_save_source"
            android:background="@null"
            android:contentDescription="@string/lbl_image"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/cb_finished"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/ib_save"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>