<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.CardView android:id="@+id/movieCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardBackgroundColor="@color/colorTransparent"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            card_view:layout_constraintGuide_percent=".02"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            card_view:layout_constraintGuide_percent=".98"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_one_guideline"
            card_view:layout_constraintGuide_percent=".30"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            card_view:layout_constraintGuide_percent=".02"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            card_view:layout_constraintGuide_percent=".98"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_title"
            android:text="@string/lbl_name"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toTopOf="@+id/top_guideline"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_lbl_title"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toTopOf="@+id/tv_lbl_title" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_date"
            android:text="@string/lbl_date"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            card_view:layout_constraintTop_toTopOf="@+id/tv_lbl_date"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_state"
            android:text="@string/lbl_state"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_state"
            card_view:layout_constraintTop_toTopOf="@+id/tv_lbl_state"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_latitude"
            android:text="@string/lbl_latitude"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_state"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_latitude"
            card_view:layout_constraintTop_toTopOf="@+id/tv_lbl_latitude"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_longitude"
            android:text="@string/lbl_longitude"
            android:textStyle="bold"
            android:textColor="@color/colorSecondaryText"
            android:layout_marginTop="5dp"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_latitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_longitude"
            card_view:layout_constraintTop_toTopOf="@+id/tv_lbl_longitude"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.appcompat.widget.CardView>
